# performance-coach

./: .env.example  .gitignore  Dockerfile  README.md  README.zh-TW.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: agent.py  config.py  db.py  entries.py  llm.py  main.py  models.py  profile.py  rag.py  recall.py  store.py  tools.py  voice.py
app/api/: router.py
app/api/routes/: coach.py  journal.py  questions.py
app/core/: clock.py  config.py  db.py
app/services/: agent.py  profile.py  recall.py  strengths.py  voice.py
docs/: index.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  EnergyChart.jsx  Greeting.jsx  Landing.jsx  api.js  energy.js  firebase.js  icons.jsx  index.css  speech.js
frontend/src/tabs/: Ask.jsx  Insights.jsx  Mantras.jsx  Record.jsx
migrations/versions/: 1ee86fa50fef_initial_schema.py
scripts/: init_db.py
tests/: test_agent.py  test_config.py  test_entries.py  test_main.py  test_questions_api.py  test_rag.py  test_recall.py  test_strengths.py
