[project]
name = "doc-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=2.58.0",
    "fastapi>=0.139.0",
    "firebase-admin>=7.5.0",
    "langchain>=1.3.13",
    "langchain-anthropic>=1.4.8",
    "langchain-openai>=1.3.5",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.2.9",
    "openai>=2.44.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
pythonpath = ["."]
